[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "drugex"
dynamic = ["version"]
description = "De Novo Drug Design with RNNs and Transformers."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["Drug discovery", "De novo design", "Generative model", "Molecules", "Optimization"]
authors = [{name = "Martin Sicho", email = "m.sicho@lacdr.leidenuniv.nl"},
           {name = "Sohvi Luukkonen", email = "s.luukkonen@lacdr.leidenuniv.nl"},
           {name = "Helle van den Maagdenberg", email = "h.w.van.den.maagdenberg@lacdr.leidenuniv.nl"},
           {name = "Linde Schoenmaker", email = "l.schoenmaker@lacdr.leidenuniv.nl"},
           {name = "Olivier Béquignon", email = "o.j.m.bequignon@lacdr.leidenuniv.nl"},
           {name = "Gerard van Westen", email = "gerard@lacdr.leidenuniv.nl"}]
maintainers = [{name = "Martin Sicho", email = "m.sicho@lacdr.leidenuniv.nl"},
               {name = "Sohvi Luukkonen", email = "s.luukkonen@lacdr.leidenuniv.nl"},
               {name = "Helle van den Maagdenberg", email = "h.w.van.den.maagdenberg@lacdr.leidenuniv.nl"},
               {name = "Linde Schoenmaker", email = "l.schoenmaker@lacdr.leidenuniv.nl"},]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "numpy >= 1.19",
  "scikit-learn >= 1.0.2",
  "pandas >= 1.2.2",
  "torch >= 1.7.0",
  "matplotlib >= 2.0",
  "tqdm",
  "rdkit-pypi",
  "joblib",
  "gitpython",
  "networkx",
  "requests",
  "qsprpred @ git+https://github.com/CDDLeiden/QSPRPred.git@v2.0.1#egg=qsprpred",
#   "RAscore @ git+https://github.com/reymond-group/RAscore.git@master#egg=RAscore",
]

[project.urls]
homepage = "https://github.com/CDDLeiden/DrugEx"
repository = "https://github.com/CDDLeiden/DrugEx"
# documentation = "https://readthedocs.org" TODO

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "drugex.about.VERSION" }

[tool.setuptools_scm]
write_to = "drugex/_version.py"