##########################
# Setup.py Configuration #
##########################
[metadata]
name = drugex
long_description = file: README.md
long_description_content_type = text/markdown

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =

[options]
install_requires =
    numpy >= 1.19
    scikit-learn >= 1.0.2
    pandas >= 1.2.2
    torch >= 1.7.0
    matplotlib >= 2.0
    tqdm
    rdkit-pypi
    joblib
    optuna
    gitpython
    xgboost
    networkx
;    RAscore @ git+https://github.com/reymond-group/RAscore.git@master#egg=RAscore

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
;package_dir =
;    = drugex

;[options.packages.find]
;where = drugex

[options.package_data]
* = test_files/*.*, test_data/*.*, *.pkl.gz, search_space.json


;[options.entry_points]
;console_scripts =
;    drugex = drugex.cli:main
